--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.67.4",
-    "react-native-config": "^1.4.5"
+    "react-native-config": "^1.4.5",
+    "react-native-i18n": "^2.0.15"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
