add:navigation and UI library for the application

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -21,6 +21,8 @@ target 'Buyer' do
 
   pod 'react-native-config', :path => '../node_modules/react-native-config'
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'BuyerTests' do
     inherit! :complete
     # Pods for testing
