--- a/package.json
+++ b/package.json
@@ -14,10 +14,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.2.6",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.1.1",
+    "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.67.4",
     "react-native-config": "^1.4.5",
-    "react-native-i18n": "^2.0.15"
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "^2.3.2",
+    "react-native-i18n": "^2.0.15",
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "^3.13.1",
+    "react-native-vector-icons": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
