--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "^2.1.5",
+    "@react-native-firebase/app": "^14.7.0",
+    "@react-native-firebase/auth": "^14.7.0",
+    "@react-native-google-signin/google-signin": "^7.2.2",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
