add:bottom tab navigation in app

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,10 @@ DerivedData
 *.hmap
 *.ipa
 *.xcuserstate
+google-services.json
+.env.development
+.env.staging
+.env.production
 
 # Android/IntelliJ
 #
