--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@react-native-firebase/auth": "^14.7.0",
     "@react-native-google-signin/google-signin": "^7.2.2",
     "@react-native-masked-view/masked-view": "^0.2.6",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
+    "axios": "^0.26.1",
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.67.4",
