--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.1.5",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-firebase/app": "^14.7.0",
     "@react-native-firebase/auth": "^14.7.0",
     "@react-native-google-signin/google-signin": "^7.2.2",
@@ -26,10 +27,14 @@
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-android-location-enabler": "^1.2.2",
+    "react-native-autocomplete-input": "^5.1.0",
     "react-native-config": "^1.4.5",
     "react-native-elements": "^3.4.2",
+    "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-i18n": "^2.0.15",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.1.0",
