--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-i18n": "^2.0.15",
+    "react-native-permissions": "^3.3.1",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
