--- a/package.json
+++ b/package.json
@@ -36,11 +36,14 @@
     "react-native-gesture-handler": "^2.3.2",
     "react-native-i18n": "^2.0.15",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-permissions": "^3.3.1",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-simple-radio-button": "^2.7.4",
+    "react-native-skeleton-placeholder": "^5.0.0",
+    "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.1.0",
     "yup": "^0.32.11"
   },
