--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -221,6 +221,7 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation project(':react-native-config')
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+     implementation 'in.juspay:hypersdk:2.0.4-rc.19'
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
