--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/stack": "^6.1.1",
     "axios": "^0.26.1",
     "formik": "^2.2.9",
+    "hyper-sdk-react": "^2.1.1",
     "moment": "^2.29.3",
     "react": "17.0.2",
     "react-native": "0.67.4",
