--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
     "react-native-svg-transformer": "^1.0.0",
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.1.0",
+    "react-redux": "^8.0.1",
     "react-stepper-horizontal": "^1.0.11",
+    "redux": "^4.2.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
