--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         ndkVersion = "21.4.7075529"
         googlePlayServicesAuthVersion = "19.2.0"
         hyperSDKVersion = "2.0.4-rc.34"
+        DynamicAssets = true
     }
     repositories {
         google()
@@ -17,7 +18,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.2'
         classpath 'com.google.gms:google-services:4.3.10'
-       
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
