--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native": "0.67.4",
     "react-native-android-location-enabler": "^1.2.2",
     "react-native-autocomplete-input": "^5.1.0",
+    "react-native-collapsible": "^1.6.0",
     "react-native-config": "^1.4.5",
     "react-native-elements": "^3.4.2",
     "react-native-fast-image": "^8.5.11",
