--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-i18n": "^2.0.15",
+    "react-native-image-slider-box": "^1.1.23",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-permissions": "^3.3.1",
