--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-redux": "^8.0.1",
     "react-stepper-horizontal": "^1.0.11",
     "redux": "^4.2.0",
+    "rn-range-slider": "^2.1.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
