add:menu in header

--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "react-native-image-slider-box": "^1.1.23",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-material-menu": "^2.0.0",
     "react-native-permissions": "^3.3.1",
+    "react-native-popup-menu": "^0.15.12",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
