--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.1.5",
+    "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-firebase/app": "^14.7.0",
@@ -42,6 +43,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-material-menu": "^2.0.0",
+    "react-native-multi-slider": "^0.3.6",
     "react-native-permissions": "^3.3.1",
     "react-native-popup-menu": "^0.15.12",
     "react-native-raw-bottom-sheet": "^2.2.0",
