chg:billing address file

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hyper-sdk-react": "^2.1.1",
     "moment": "^2.29.3",
     "react": "17.0.2",
+    "react-i18next": "^11.17.0",
     "react-native": "0.67.4",
     "react-native-android-location-enabler": "^1.2.2",
     "react-native-autocomplete-input": "^5.1.0",
