--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "axios": "^0.26.1",
     "formik": "^2.2.9",
     "hyper-sdk-react": "^2.1.1",
+    "i18next": "^21.8.9",
     "moment": "^2.29.3",
     "react": "17.0.2",
+    "react-i18next": "^11.17.1",
     "react-native": "0.67.4",
     "react-native-android-location-enabler": "^1.2.2",
     "react-native-autocomplete-input": "^5.1.0",
