--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "react-native-collapsible": "^1.6.0",
     "react-native-config": "^1.4.5",
     "react-native-elements": "^3.4.2",
+    "react-native-event-source": "^1.1.0",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-image-slider-box": "^1.1.23",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-material-menu": "^2.0.0",
     "react-native-multi-slider": "^0.3.6",
     "react-native-permissions": "^3.3.1",
@@ -50,6 +52,7 @@
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
+    "react-native-select-dropdown": "^2.0.4",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-skeleton-placeholder": "^5.0.0",
     "react-native-step-indicator": "^1.0.3",
