add: sample env file chg :updated slang lab assistance add: search items add: added languages add:inline trigger in search bar add:inline trigger for slang lab add:condition to initialize slang assistance rmv:removed searchbar loading add: assistant is and api key from config add: slang retail assistant

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,8 @@
 rootProject.name = 'Buyer'
+include ':@slanglabs_slang-conva-react-native-retail-assistant'
+project(':@slanglabs_slang-conva-react-native-retail-assistant').projectDir = new File(rootProject.projectDir, '../node_modules/@slanglabs/slang-conva-react-native-retail-assistant/android')
+include ':@slanglabs_slang-conva-react-native-retail-assistant'
+project(':@slanglabs_slang-conva-react-native-retail-assistant').projectDir = new File(rootProject.projectDir, '../node_modules/@slanglabs/slang-conva-react-native-retail-assistant/android')
 include ':react-native-svg'
 project(':react-native-svg').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-svg/android')
 include ':react-native-permissions'
