--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+def REACT_NATIVE_VERSION = new File(['node', '--print',"JSON.parse(require('fs').readFileSync(require.resolve('react-native/package.json'), 'utf-8')).version"].execute(null, rootDir).text.trim())
 buildscript {
     ext {
         buildToolsVersion = "30.0.2"
@@ -26,6 +26,12 @@ buildscript {
 
 allprojects {
     repositories {
+         configurations.all {
+          resolutionStrategy {
+            force "com.facebook.react:react-native:" + REACT_NATIVE_VERSION
+          }
+    }
+    
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
