--- a/package.json
+++ b/package.json
@@ -32,13 +32,11 @@
     "i18next": "^21.8.9",
     "moment": "^2.29.3",
     "react": "17.0.2",
-    "react-i18next": "^11.17.1",
     "react-native": "0.67.4",
     "react-native-android-location-enabler": "^1.2.2",
     "react-native-autocomplete-input": "^5.1.0",
     "react-native-collapsible": "^1.6.0",
     "react-native-config": "^1.4.5",
-    "react-native-elements": "^3.4.2",
     "react-native-event-source": "^1.1.0",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.3.2",
@@ -48,6 +46,7 @@
     "react-native-material-dropdown": "^0.11.1",
     "react-native-material-menu": "^2.0.0",
     "react-native-multi-slider": "^0.3.6",
+    "react-native-paper": "^5.1.3",
     "react-native-permissions": "^3.3.1",
     "react-native-popup-menu": "^0.15.12",
     "react-native-raw-bottom-sheet": "^2.2.0",
