--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-material-dropdown": "^0.11.1",
     "react-native-material-menu": "^2.0.0",
     "react-native-multi-slider": "^0.3.6",
+    "react-native-pager-view": "^6.1.2",
     "react-native-paper": "^5.1.3",
     "react-native-permissions": "^3.3.1",
     "react-native-popup-menu": "^0.15.12",
