--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
-    "@react-navigation/stack": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.8",
     "@slanglabs/slang-conva-react-native-retail-assistant": "8.0.2",
     "axios": "^0.26.1",
     "formik": "^2.2.9",
     "hyper-sdk-react": "^2.1.1",
-    "i18next": "^21.8.9",
     "moment": "^2.29.3",
     "react": "17.0.2",
     "react-native": "0.67.4",
