--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "eslint": "^7.31.0",
     "jest": "^27.5.1",
     "metro-react-native-babel-preset": "^0.70.0",
+    "prettier": "^2.8.3",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
