--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/geolocation": "^2.0.2",
+    "@react-native-community/netinfo": "^9.3.7",
     "@react-native-firebase/app": "^14.7.0",
     "@react-native-firebase/auth": "^14.7.0",
     "@react-native-google-signin/google-signin": "^7.2.2",
