--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^8.0.1",
+    "react-scripts": "^5.0.1",
     "react-stepper-horizontal": "^1.0.11",
     "redux": "^4.2.0",
     "rn-range-slider": "^2.1.1",
