--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@react-native-firebase/auth": "^18.6.1",
     "@react-native-google-signin/google-signin": "^10.1.0",
     "@react-native-masked-view/masked-view": "^0.3.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "hyper-sdk-react": "2.1.15",
