--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "hyper-sdk-react": "2.1.15",
+    "mapmyindia-map-react-native-beta": "^0.4.2",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.7",
