--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "hyper-sdk-react": "2.1.15",
-    "mapmyindia-map-react-native-beta": "^0.4.2",
+    "mappls-map-react-native": "^1.0.6",
+    "mappls-search-widgets-react-native": "^1.1.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.7",
