--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "react-native start --reset-cache",
     "test": "jest"
   },
   "dependencies": {
@@ -45,6 +45,7 @@
     "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "^14.0.0",
     "react-native-toast-message": "^2.1.7",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^10.0.2",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
