--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-toast-message": "^2.1.7",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^10.0.2",
+    "react-native-webview": "^13.6.4",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "yup": "^1.3.2"
