--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "react-native-event-source": "^1.1.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.13.4",
+    "react-native-image-picker": "^7.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-material-menu": "^2.0.0",
     "react-native-pager-view": "^6.2.2",
     "react-native-paper": "^5.11.1",
+    "react-native-paper-dropdown": "^1.0.7",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
