--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "android:staging": "react-native run-android --variant=stagingdebug",
+    "android:staging-release": "react-native run-android --variant=stagingrelease",
+    "android:preprod": "react-native run-android --variant=developmentdebug",
+    "android:preprod-release": "react-native run-android --variant=developmentrelease",
+    "android:prod": "react-native run-android --variant=productiondebug",
+    "android:prod-release": "react-native run-android --variant=productionrelease",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
@@ -27,11 +33,13 @@
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "hyper-sdk-react": "2.1.15",
+    "mappls-direction-widget-react-native": "^1.1.0",
     "mappls-map-react-native": "^1.0.6",
     "mappls-search-widgets-react-native": "^1.1.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.7",
+    "react-native-config": "^1.5.1",
     "react-native-device-info": "^10.11.0",
     "react-native-event-source": "^1.1.0",
     "react-native-fast-image": "^8.6.3",
