--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@turf/helpers": "^6.5.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "hyper-sdk-react": "2.1.15",
     "mappls-direction-widget-react-native": "^1.1.0",
     "mappls-map-react-native": "^1.0.6",
+    "mappls-polyline": "^1.0.0",
     "mappls-search-widgets-react-native": "^1.1.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
