--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -167,7 +167,7 @@ dependencies {
 }
 
 project.ext.vectoricons = [
-        iconFontNames: [ 'FontAwesome.ttf', 'FontAwesome5_Regular.ttf',
+        iconFontNames: [ 'AntDesign.ttf', 'FontAwesome.ttf', 'FontAwesome5_Regular.ttf',
                          'FontAwesome5_Solid.ttf', 'FontAwesome5_Brands.ttf', 'MaterialIcons.ttf', 'MaterialCommunityIcons.ttf', 'EvilIcons.ttf', 'SimpleLineIcons.ttf'] // <-- add this line (1/2)
 ]
 
