feat: implement bhashini integration

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build": "npx react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res/"
   },
   "dependencies": {
+    "@motify/components": "^0.18.0",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.19.5",
     "@react-native-community/netinfo": "^11.1.0",
@@ -32,6 +33,7 @@
     "@turf/helpers": "^6.5.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.6.2",
+    "ffmpeg-kit-react-native": "^6.0.2",
     "formik": "^2.4.5",
     "hyper-sdk-react": "2.1.15",
     "mappls-map-react-native": "^1.0.6",
@@ -40,10 +42,12 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.7",
+    "react-native-audio-recorder-player": "^3.6.6",
     "react-native-config": "^1.5.1",
     "react-native-device-info": "^10.11.0",
     "react-native-event-source": "^1.1.0",
     "react-native-fast-image": "^8.6.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-image-picker": "^7.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -53,6 +57,7 @@
     "react-native-paper": "^5.11.1",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-raw-bottom-sheet": "^2.2.0",
+    "react-native-reanimated": "^3.7.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-skeleton-placeholder": "^5.2.4",
