--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "hyper-sdk-react": "2.1.15",
+    "i18next": "^23.10.0",
     "mappls-map-react-native": "^1.0.6",
     "mappls-polyline": "^1.0.0",
     "mappls-search-widgets-react-native": "^1.1.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
+    "react-i18next": "^14.0.5",
     "react-native": "0.72.7",
     "react-native-config": "^1.5.1",
     "react-native-device-info": "^10.11.0",
