--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-native-paper": "^5.11.1",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-raw-bottom-sheet": "^2.2.0",
+    "react-native-razorpay": "^2.3.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-skeleton-placeholder": "^5.2.4",
@@ -75,6 +76,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-razorpay": "^2.2.5",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
