--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-i18next": "^14.0.5",
     "react-native": "0.72.7",
     "react-native-audio-recorder-player": "^3.6.6",
+    "react-native-camera": "^4.2.1",
     "react-native-config": "^1.5.1",
     "react-native-device-info": "^10.11.0",
     "react-native-event-source": "^1.1.0",
@@ -58,6 +59,7 @@
     "react-native-pager-view": "^6.2.2",
     "react-native-paper": "^5.11.1",
     "react-native-paper-dropdown": "^1.0.7",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^3.7.1",
