--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-native-firebase/auth": "^18.6.1",
     "@react-native-google-signin/google-signin": "^10.1.0",
     "@react-native-masked-view/masked-view": "^0.3.0",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
