--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native": "0.72.7",
     "react-native-audio-recorder-player": "^3.6.6",
     "react-native-camera": "^4.2.1",
+    "react-native-check-box": "^2.1.7",
     "react-native-config": "^1.5.1",
     "react-native-device-info": "^10.11.0",
     "react-native-event-source": "^1.1.0",
