fix: Logs Can Be Captured In Clear Text, encrypt data stored in local storage

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@turf/helpers": "^6.5.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.6.2",
+    "crypto-js": "3.1.9-1",
     "ffmpeg-kit-react-native": "^6.0.2",
     "formik": "^2.4.5",
     "hyper-sdk-react": "2.1.15",
@@ -88,6 +89,7 @@
     "@types/react-native-razorpay": "^2.2.5",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
