add: SSL Pinning

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -31,6 +31,7 @@ target 'ONDCReferenceBuyerApp' do
   # Flags change depending on the env values.
   flags = get_default_flags()
 
+  pod 'TrustKit'
   pod 'Firebase', :modular_headers => true
   pod 'FirebaseCore', :modular_headers => true
   pod 'FirebaseCoreInternal', :modular_headers => true
