--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-camera": "^4.2.1",
     "react-native-check-box": "^2.1.7",
     "react-native-config": "^1.5.1",
+    "react-native-detect-frida": "^0.1.3",
     "react-native-device-info": "^10.11.0",
     "react-native-event-source": "^1.1.0",
     "react-native-fast-image": "^8.6.3",
