--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "mappls-polyline": "^1.0.0",
     "mappls-search-widgets-react-native": "^1.1.0",
     "moment": "^2.29.4",
+    "moment-duration-format": "^2.3.2",
     "react": "18.2.0",
     "react-i18next": "^14.0.5",
     "react-native": "0.72.7",
