--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^2.2.5",
     "@turf/helpers": "^6.5.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.6.2",
@@ -69,7 +70,7 @@
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-razorpay": "^2.3.0",
-    "react-native-reanimated": "^3.7.1",
+    "react-native-reanimated": "3.10.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-skeleton-placeholder": "^5.2.4",
