--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-native-audio-recorder-player": "^3.6.6",
     "react-native-camera": "^4.2.1",
     "react-native-check-box": "^2.1.7",
+    "react-native-color-matrix-image-filters": "^6.0.9",
     "react-native-config": "^1.5.1",
     "react-native-detect-frida": "^0.1.3",
     "react-native-device-info": "^10.11.0",
