--- a/ios/Podfile
+++ b/ios/Podfile
@@ -57,6 +57,18 @@ target 'ONDCReferenceBuyerApp' do
     # Pods for testing
   end
 
+  target 'ONDCReferenceBuyerAppDevelopment' do
+    inherit! :complete
+  end
+
+  target 'ONDCReferenceBuyerAppStaging' do
+    inherit! :complete
+  end
+
+  target 'ONDCReferenceBuyerAppPreprod' do
+    inherit! :complete
+  end
+
   post_install do |installer|
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
     react_native_post_install(
