--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "android:development": "react-native run-android --variant=developmentdebug",
     "android:development-release": "react-native run-android --variant=developmentrelease",
     "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "ios:staging": "react-native run-ios --scheme Staging",
+    "ios:development": "react-native run-ios --scheme Development",
+    "ios:preprod": "react-native run-ios --scheme Preprod",
+    "ios:product": "react-native run-ios --scheme BuyerApp",
     "lint": "eslint .",
     "start": "react-native start --reset-cache",
     "test": "jest",
