--- a/ios/Podfile
+++ b/ios/Podfile
@@ -31,10 +31,10 @@ target 'ONDCReferenceBuyerApp' do
   # Flags change depending on the env values.
   flags = get_default_flags()
 
-  pod 'TrustKit'
   pod 'Firebase', :modular_headers => true
   pod 'FirebaseCore', :modular_headers => true
   pod 'FirebaseCoreInternal', :modular_headers => true
+  pod 'GoogleSignIn', :modular_headers => true
   pod 'GoogleUtilities', :modular_headers => true
 
   use_react_native!(
