--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-i18next": "^14.0.5",
     "react-native": "0.72.12",
     "react-native-audio-recorder-player": "^3.6.6",
+    "react-native-blob-util": "^0.19.11",
     "react-native-camera": "^4.2.1",
     "react-native-check-box": "^2.1.7",
     "react-native-color-matrix-image-filters": "^6.0.9",
@@ -75,6 +76,7 @@
     "react-native-pager-view": "^6.2.2",
     "react-native-paper": "^5.11.1",
     "react-native-paper-dropdown": "^1.0.7",
+    "react-native-pdf": "^6.7.5",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-razorpay": "^2.3.0",
