--- a/ios/ONDCReferenceBuyerApp/Info.plist
+++ b/ios/ONDCReferenceBuyerApp/Info.plist
@@ -36,7 +36,9 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>To get the current location to search hyper local stores</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>To get the current location to search hyper local stores</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -92,5 +94,13 @@
 			</array>
 		</dict>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>We need access to your photo library to allow you to upload photos for complaints</string>
+	<key>NSMicrophoneUsageDescription</key>
+    <string>We need access to listen to your commands for search request</string>
+	<key>NSCameraUsageDescription</key>
+    <string>We need access to your photo library to allow you to upload photos for complaints</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+    <string>We need access to listen to your commands for search request</string>
 </dict>
 </plist>
