--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-native-paper": "^5.11.1",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-pdf": "^6.7.5",
+    "react-native-permissions": "^4.1.5",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-razorpay": "^2.3.0",
