--- a/ios/ONDCReferenceBuyerApp.xcodeproj/xcshareddata/xcschemes/BuyerApp.xcscheme
+++ b/ios/ONDCReferenceBuyerApp.xcodeproj/xcshareddata/xcschemes/BuyerApp.xcscheme
@@ -102,5 +102,14 @@
    <ArchiveAction
       buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
+      <PreActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Run Script"
+               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;echo &quot;.env.production&quot; &gt; /tmp/envfile&#10;">
+            </ActionContent>
+         </ExecutionAction>
+      </PreActions>
    </ArchiveAction>
 </Scheme>
